fix: make the TableView and the KafkaMessageBrowser scroll the table content keeping the toolbar(s) visible (#315)

--- a/src/Kafka/KafkaMessageBrowser/KafkaMessageBrowser.css
+++ b/src/Kafka/KafkaMessageBrowser/KafkaMessageBrowser.css
@@ -1,3 +1,7 @@
+.mas-KafkaMessageBrowser-Toolbar {
+  z-index: 999;
+}
+
 .mas-KafkaMessageBrowser-Toolbar .pf-c-toolbar__content-section {
   align-items: flex-start;
 }
